// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module renders a badge correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginStart2 relative"
            style={
              Object {
                "top": "1px",
              }
            }
          >
            <div
              className="Badge middle infoBase"
            >
              <div
                className="Flex rowGap1 columnGap1 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="box xsDisplayInlineBlock"
                    style={
                      Object {
                        "marginTop": "2px",
                      }
                    }
                  >
                    Try it out!
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders a title correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Module Test"
          >
            Module Test
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    />
  </div>
</div>
`;

exports[`Module renders an error correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="there is an error"
            className="icon errorIcon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize300 errorText alignStart breakWord fontWeightSemiBold lineClamp"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders an icon button correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <button
            aria-label="Get help"
            className="parentButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="button tapTransition enabled"
            >
              <div
                className="pog lightGray"
                style={
                  Object {
                    "height": 24,
                    "width": 24,
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  aria-label=""
                  className="icon defaultIcon iconBlock"
                  height={12}
                  role="img"
                  viewBox="0 0 24 24"
                  width={12}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders an icon correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="locked"
            className="icon defaultIcon iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightSemiBold lineClamp"
            style={
              Object {
                "WebkitLineClamp": 1,
              }
            }
            title="Testing"
          >
            Testing
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders content correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders the base correctly 1`] = `
<div
  className="box default paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    />
  </div>
</div>
`;
